terminei a lista de exercícios